[package]
name = "check-pjsip-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json"] }
sha2 = "0.10"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
