[package]
name = "check-pjsip-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
tokio = { version = "1.40", features = ["full"] }
sha2 = "0.10"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.11.0"
slack-morphism = { version = "2.5", features = [ "axum"] }

